<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo_ap"
        android:alpha="0.8"
        android:contentDescription="@string/app_logo"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/splash_note"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/splash_default_margin"
        android:layout_height="@dimen/welcome_message_height"
        app:layout_constraintTop_toBottomOf="@id/splash_logo"
        android:alpha="0.6"
        style="@style/textShadowOverlay"
        android:shadowColor="@android:color/white"
        android:gravity="center"
        android:textSize="@dimen/splash_welcome_message"
        android:text="@string/splash_text"
        />

    <Button
        android:id="@+id/splash_skip"
        android:layout_width="0dp"
        android:layout_height="@dimen/splash_button_height"
        app:layout_constraintWidth_percent="0.6"
        style="@style/textShadowOverlay"
        android:background="@drawable/button_radius_green"
        android:text="@string/splash_skip"
        android:alpha="0.8"
        app:layout_constraintTop_toBottomOf="@id/splash_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>